# hetzner-relay

./: README.md  main.py  pyproject.toml
.github/workflows/: allocate.yml  rebuild.yml  test.yml
hetzner_relay/: main.py
